fix contrast for button to improve a11y, add netlify props

--- a/src/components/MailingListForm/MailingListForm.css
+++ b/src/components/MailingListForm/MailingListForm.css
@@ -34,7 +34,7 @@
   margin-top: 3%;
   padding: 1.2%;
   color: white;
-  background-color: #ef9637;
+  background-color: #352615;
   text-shadow: .5px .5px .5px black, -.5px -.5px .5px black;
   font-weight: bold;
   border-radius: 0 4px 4px 0;
